javascript/js_transpiler/peggy_parsers/from_php/php_to_typescript.js
// Generated by Peggy 1.1.0.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message;
  this.expected = expected;
  this.found = found;
  this.location = location;
  this.name = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};

  var peg$startRuleFunctions = { expressions: peg$parseexpressions };
  var peg$startRuleFunction = peg$parseexpressions;

  var peg$c0 = function(a1, a2) {return a1+a2;};
  var peg$c1 = "";
  var peg$c2 = function() {return "";};
  var peg$c3 = function(a1, a2) {return a1 + a2;};
  var peg$c4 = "public";
  var peg$c5 = peg$literalExpectation("public", false);
  var peg$c6 = "private";
  var peg$c7 = peg$literalExpectation("private", false);
  var peg$c8 = "class";
  var peg$c9 = peg$literalExpectation("class", false);
  var peg$c10 = "{";
  var peg$c11 = peg$literalExpectation("{", false);
  var peg$c12 = "}";
  var peg$c13 = peg$literalExpectation("}", false);
  var peg$c14 = function(a2, a4) {return ["class ",a2,"{",a4,"}"].join("");};
  var peg$c15 = "trait";
  var peg$c16 = peg$literalExpectation("trait", false);
  var peg$c17 = function(a2, a4) {return ["trait","public",a2,a4];};
  var peg$c18 = "extends";
  var peg$c19 = peg$literalExpectation("extends", false);
  var peg$c20 = function(a2, a4) {return ["class ",a2," extends ",a4,"{",a6,"}"].join();};
  var peg$c21 = "implements";
  var peg$c22 = peg$literalExpectation("implements", false);
  var peg$c23 = function(a2, a4, a6) {return ["class_implements","public",a2,a4,a6];};
  var peg$c24 = ";";
  var peg$c25 = peg$literalExpectation(";", false);
  var peg$c26 = function(a1) {return a1+";";};
  var peg$c27 = "while";
  var peg$c28 = peg$literalExpectation("while", false);
  var peg$c29 = "(";
  var peg$c30 = peg$literalExpectation("(", false);
  var peg$c31 = ")";
  var peg$c32 = peg$literalExpectation(")", false);
  var peg$c33 = function(a3, a5) {return ["while(",a3,"){",a5,"}"].join("");};
  var peg$c34 = "do";
  var peg$c35 = peg$literalExpectation("do", false);
  var peg$c36 = function(a2, a5) {return ["do ",a2," while(",a5,");"].join("");};
  var peg$c37 = "switch";
  var peg$c38 = peg$literalExpectation("switch", false);
  var peg$c39 = function(a3, a6) {return ["switch(",a3,"){",a6,"}"].join("");};
  var peg$c40 = "for";
  var peg$c41 = peg$literalExpectation("for", false);
  var peg$c42 = function(a3, a5, a7, a9) {return ["for(",a3,";",a5,";",a7,"){",a9,"}"].join("");};
  var peg$c43 = "foreach";
  var peg$c44 = peg$literalExpectation("foreach", false);
  var peg$c45 = "as";
  var peg$c46 = peg$literalExpectation("as", false);
  var peg$c47 = "=>";
  var peg$c48 = peg$literalExpectation("=>", false);
  var peg$c49 = function(a3, a5, a7, a9) {return ["foreach_with_index","Object",a5,a7,a3,a9];};
  var peg$c50 = function(a3, a5, a7) {return ["for(",a3," in ",a5,"){",a7,"}"].join("");};
  var peg$c51 = "if";
  var peg$c52 = peg$literalExpectation("if", false);
  var peg$c53 = function(a3, a5, a6) {return ["if(",a3,"){",a5,"}",a6].join("");};
  var peg$c54 = function(a3, a5) {return ["if(",a3,"){",a5,"}"].join("");};
  var peg$c55 = "function";
  var peg$c56 = peg$literalExpectation("function", false);
  var peg$c57 = function(a2, a4, a7) {return ["function ",a2,"(",a4,"){",a7,"}"].join("");};
  var peg$c58 = ",";
  var peg$c59 = peg$literalExpectation(",", false);
  var peg$c60 = function(a1, a3) {return [a1].concat(a3);};
  var peg$c61 = "case";
  var peg$c62 = peg$literalExpectation("case", false);
  var peg$c63 = ":";
  var peg$c64 = peg$literalExpectation(":", false);
  var peg$c65 = "break";
  var peg$c66 = peg$literalExpectation("break", false);
  var peg$c67 = function(a2, a4) {return ["case ",a2,":",a4].join("")};
  var peg$c68 = "default";
  var peg$c69 = peg$literalExpectation("default", false);
  var peg$c70 = function(a1, a4) {return a1+["default:",a4].join("")};
  var peg$c71 = "static";
  var peg$c72 = peg$literalExpectation("static", false);
  var peg$c73 = function(a1, a4, a6, a9) {return ["static ",a4,"(",a6,"){",a9,"}"].join("");};
  var peg$c74 = function(a1, a3, a5, a8) {return [a3,"(",a5,"){",a8,"}"].join("");};
  var peg$c75 = "return";
  var peg$c76 = peg$literalExpectation("return", false);
  var peg$c77 = function(a2) {return ["return ",a2].join("");};
  var peg$c78 = function() {return "return";};
  var peg$c79 = "continue";
  var peg$c80 = peg$literalExpectation("continue", false);
  var peg$c81 = function() {return "continue";};
  var peg$c82 = "=";
  var peg$c83 = peg$literalExpectation("=", false);
  var peg$c84 = function(a1, a2, a3) {return [a1,a2,a3].join("");};
  var peg$c85 = "++";
  var peg$c86 = peg$literalExpectation("++", false);
  var peg$c87 = "--";
  var peg$c88 = peg$literalExpectation("--", false);
  var peg$c89 = function(a1, a2) {return [a1,a2].join("");};
  var peg$c90 = "+=";
  var peg$c91 = peg$literalExpectation("+=", false);
  var peg$c92 = "%=";
  var peg$c93 = peg$literalExpectation("%=", false);
  var peg$c94 = "-=";
  var peg$c95 = peg$literalExpectation("-=", false);
  var peg$c96 = "*=";
  var peg$c97 = peg$literalExpectation("*=", false);
  var peg$c98 = "/=";
  var peg$c99 = peg$literalExpectation("/=", false);
  var peg$c100 = "?";
  var peg$c101 = peg$literalExpectation("?", false);
  var peg$c102 = function(a1, a3, a5) {return a1+"?"+a3+":"+a5;};
  var peg$c103 = "...";
  var peg$c104 = peg$literalExpectation("...", false);
  var peg$c105 = function(a1, a2) {return "..." + a2;};
  var peg$c106 = "||";
  var peg$c107 = peg$literalExpectation("||", false);
  var peg$c108 = "or";
  var peg$c109 = peg$literalExpectation("or", false);
  var peg$c110 = "&&";
  var peg$c111 = peg$literalExpectation("&&", false);
  var peg$c112 = "and";
  var peg$c113 = peg$literalExpectation("and", false);
  var peg$c114 = "!==";
  var peg$c115 = peg$literalExpectation("!==", false);
  var peg$c116 = "===";
  var peg$c117 = peg$literalExpectation("===", false);
  var peg$c118 = function(a1, a2, a3) {return [a1,"===",a3].join("");};
  var peg$c119 = "<=";
  var peg$c120 = peg$literalExpectation("<=", false);
  var peg$c121 = "<";
  var peg$c122 = peg$literalExpectation("<", false);
  var peg$c123 = ">=";
  var peg$c124 = peg$literalExpectation(">=", false);
  var peg$c125 = ">";
  var peg$c126 = peg$literalExpectation(">", false);
  var peg$c127 = ">>";
  var peg$c128 = peg$literalExpectation(">>", false);
  var peg$c129 = "<<";
  var peg$c130 = peg$literalExpectation("<<", false);
  var peg$c131 = "+";
  var peg$c132 = peg$literalExpectation("+", false);
  var peg$c133 = "-";
  var peg$c134 = peg$literalExpectation("-", false);
  var peg$c135 = "*";
  var peg$c136 = peg$literalExpectation("*", false);
  var peg$c137 = "/";
  var peg$c138 = peg$literalExpectation("/", false);
  var peg$c139 = "%";
  var peg$c140 = peg$literalExpectation("%", false);
  var peg$c141 = function(a2) {return ["-",a2].join("");};
  var peg$c142 = "!";
  var peg$c143 = peg$literalExpectation("!", false);
  var peg$c144 = function(a1, a2) {return "!"+a2;};
  var peg$c145 = "->";
  var peg$c146 = peg$literalExpectation("->", false);
  var peg$c147 = function(a1, a2, a3) {return a1+"->"+a3};
  var peg$c148 = "new";
  var peg$c149 = peg$literalExpectation("new", false);
  var peg$c150 = function(a4) {return ["new class{",a4,"}"].join("")};
  var peg$c151 = "[";
  var peg$c152 = peg$literalExpectation("[", false);
  var peg$c153 = "]";
  var peg$c154 = peg$literalExpectation("]", false);
  var peg$c155 = function(a2) {return "["+a2+"]";};
  var peg$c156 = function(a2) {return "("+a2+")";};
  var peg$c157 = function() {return "()"};
  var peg$c158 = function(a3, a6) {return ["function(",a3,"){",a6,"}"].join("")};
  var peg$c159 = function() {return "[]";};
  var peg$c160 = function(a1) {return a1;};
  var peg$c161 = "&";
  var peg$c162 = peg$literalExpectation("&", false);
  var peg$c163 = function(a2) {return ["&", a2].join("");};
  var peg$c164 = function(a1, a3) {return [a1,"=",a3].join("");};
  var peg$c165 = function(a1, a3) {return a1+","+a3;};
  var peg$c166 = "else";
  var peg$c167 = peg$literalExpectation("else", false);
  var peg$c168 = "elseif";
  var peg$c169 = peg$literalExpectation("elseif", false);
  var peg$c170 = function(a1, a3, a5, a6) {return ["else if(",a3,"){",a5,"}",a6].join("")};
  var peg$c171 = function(a1, a3) {return ["elif",a3,a5]};
  var peg$c172 = function() {return ["else ",a2].join("");};
  var peg$c173 = "$";
  var peg$c174 = peg$literalExpectation("$", false);
  var peg$c175 = function(a2) {return a2;};
  var peg$c176 = /^[a-zA-Z_]/;
  var peg$c177 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$c178 = /^[a-zA-Z0-9_]/;
  var peg$c179 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$c180 = function() {return text();};
  var peg$c181 = "\"";
  var peg$c182 = peg$literalExpectation("\"", false);
  var peg$c183 = /^[^"\\]/;
  var peg$c184 = peg$classExpectation(["\"", "\\"], true, false);
  var peg$c185 = "\\";
  var peg$c186 = peg$literalExpectation("\\", false);
  var peg$c187 = peg$anyExpectation();
  var peg$c188 = ".";
  var peg$c189 = peg$literalExpectation(".", false);
  var peg$c190 = function(args) {$$ = args[0]+"."+args[2]};
  var peg$c191 = peg$otherExpectation("integer");
  var peg$c192 = /^[0-9]/;
  var peg$c193 = peg$classExpectation([["0", "9"]], false, false);
  var peg$c194 = function() { return text(); };
  var peg$c195 = /^[ \t\n\r]/;
  var peg$c196 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseexpressions() {
    var s0;

    s0 = peg$parsestatements_();

    return s0;
  }

  function peg$parsestatements_() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsestatement();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parsestatements_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parsestatement();
    }

    return s0;
  }

  function peg$parseclass_statements() {
    var s0, s1;

    s0 = peg$parseclass_statements_();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$c1;
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseclass_statements_() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseclass_statement();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseclass_statements_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseclass_statement();
    }

    return s0;
  }

  function peg$parseaccess_modifier() {
    var s0;

    if (input.substr(peg$currPos, 6) === peg$c4) {
      s0 = peg$c4;
      peg$currPos += 6;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 7) === peg$c6) {
        s0 = peg$c6;
        peg$currPos += 7;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
    }

    return s0;
  }

  function peg$parseclass_() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c8) {
      s1 = peg$c8;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c9); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse__();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIDENTIFIER();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 123) {
              s5 = peg$c10;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c11); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseclass_statements();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 125) {
                      s9 = peg$c12;
                      peg$currPos++;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c13); }
                    }
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c14(s3, s7);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 5) === peg$c15) {
        s1 = peg$c15;
        peg$currPos += 5;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c16); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse__();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseIDENTIFIER();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 123) {
                s5 = peg$c10;
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c11); }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseclass_statements();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parse_();
                    if (s8 !== peg$FAILED) {
                      if (input.charCodeAt(peg$currPos) === 125) {
                        s9 = peg$c12;
                        peg$currPos++;
                      } else {
                        s9 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c13); }
                      }
                      if (s9 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c17(s3, s7);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 5) === peg$c8) {
          s1 = peg$c8;
          peg$currPos += 5;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse__();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseIDENTIFIER();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse__();
              if (s4 !== peg$FAILED) {
                if (input.substr(peg$currPos, 7) === peg$c18) {
                  s5 = peg$c18;
                  peg$currPos += 7;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c19); }
                }
                if (s5 !== peg$FAILED) {
                  s6 = peg$parse__();
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parseIDENTIFIER();
                    if (s7 !== peg$FAILED) {
                      s8 = peg$parse_();
                      if (s8 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 123) {
                          s9 = peg$c10;
                          peg$currPos++;
                        } else {
                          s9 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c11); }
                        }
                        if (s9 !== peg$FAILED) {
                          s10 = peg$parse_();
                          if (s10 !== peg$FAILED) {
                            s11 = peg$parseclass_statements();
                            if (s11 !== peg$FAILED) {
                              s12 = peg$parse_();
                              if (s12 !== peg$FAILED) {
                                if (input.charCodeAt(peg$currPos) === 125) {
                                  s13 = peg$c12;
                                  peg$currPos++;
                                } else {
                                  s13 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c13); }
                                }
                                if (s13 !== peg$FAILED) {
                                  peg$savedPos = s0;
                                  s1 = peg$c20(s3, s7);
                                  s0 = s1;
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
